fix: align navbar content with page content via container padding

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,6 +57,11 @@ nav {
   #navbar-cta {
     display: none;
   }
+
+  .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
 #post #navbar-cta {
@@ -510,11 +515,7 @@ sup a.footnote {
 
   nav {
     .logo {
-      margin-left: 1rem;
-    }
-    .container {
-      padding-left: 0;
-      padding-right: 0;
+      margin-left: 0;
     }
   }
 
